[project]
name = "leetcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "beautifulsoup4>=4.14.0",
    "black>=25.9.0",
    "bokeh>=3.8.0",
    "howdoi>=2.0.20",
    "isort>=6.0.1",
    "jason>=0.1.7",
    "jsonschema>=4.25.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pdbpp>=0.11.7",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "prospector>=1.17.3",
    "pybrain>=0.3",
    "pydantic>=2.11.9",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "results>=1.4.0",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "tinydb>=4.8.2",
    "trypackage>=0.3.0",
]
